@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>vaadin-flow-components</artifactId>
-    <version>22.0-SNAPSHOT</version>
+    <version>23.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Vaadin Flow Components Root Project</name>
     <parent>
@@ -11,17 +11,18 @@
         <version>2.0.2</version>
     </parent>
     <properties>
-        <flow.version>9.0-SNAPSHOT</flow.version>
-        <testbench.version>7.0.3</testbench.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <flow.version>23.0-SNAPSHOT</flow.version>
+        <testbench.version>8.0.0.beta3</testbench.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8
                 </project.reporting.outputEncoding>
-        <jetty.version>9.4.15.v20190215</jetty.version>
+        <jetty.version>9.4.45.v20220203</jetty.version>
         <jetty.http.port>8080</jetty.http.port>
         <jetty.stop.port>9999</jetty.stop.port>
-        <maven.failsafe.plugin.version>2.22.1</maven.failsafe.plugin.version>
+        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
+        <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
         <maven.resources.plugin.version>3.0.2</maven.resources.plugin.version>
         <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
         <failsafe.forkCount>4</failsafe.forkCount>
@@ -29,8 +30,6 @@
         <com.vaadin.testbench.Parameters.testsInParallel>1</com.vaadin.testbench.Parameters.testsInParallel>
         <failIfNoTests>false</failIfNoTests>
         <vaadin.pnpm.enable>false</vaadin.pnpm.enable>
-        <powermock.version>1.7.1</powermock.version>
-        <jackson.version>2.11.2</jackson.version>
         <sauce-connect.version>2.1.25</sauce-connect.version>
         <ci-sauce.version>1.149</ci-sauce.version>
         <sauce.options>--tunnel-identifier ${maven.build.timestamp}</sauce.options>
@@ -38,6 +37,7 @@
         <osgi.export.package>default</osgi.export.package>
     </properties>
     <modules>
+        <module>vaadin-component-demo-helpers</module>
         <module>vaadin-renderer-flow-parent</module>
         <module>vaadin-lumo-theme-flow-parent</module>
         <module>vaadin-material-theme-flow-parent</module>
@@ -79,6 +79,7 @@
         <module>vaadin-cookie-consent-flow-parent</module>
         <module>vaadin-crud-flow-parent</module>
         <module>vaadin-grid-pro-flow-parent</module>
+        <module>vaadin-map-flow-parent</module>
         <module>vaadin-rich-text-editor-flow-parent</module>
     </modules>
     <profiles>
@@ -152,7 +153,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <version>3.3.2</version>
                     <executions>
                         <execution>
                             <id>attach-javadocs</id>
@@ -231,9 +232,18 @@
                         <stopWait>5</stopWait>
                         <stopKey>foo</stopKey>
                         <systemProperties>
+                            <force>true</force>
                             <systemProperty>
                                 <name>project.basedir</name>
                                 <value>${project.basedir}</value>
+                            </systemProperty>
+                            <systemProperty>
+                                <name>vaadin.productionMode</name>
+                                <value>true</value>
+                            </systemProperty>
+                            <systemProperty>
+                                <name>vaadin.reuseDevServer</name>
+                                <value>true</value>
                             </systemProperty>
                         </systemProperties>
                     </configuration>
@@ -244,14 +254,6 @@
                             <goals>
                                 <goal>deploy-war</goal>
                             </goals>
-                            <configuration>
-                                <systemProperties>
-                                    <systemProperty>
-                                        <name>vaadin.productionMode</name>
-                                        <value>true</value>
-                                    </systemProperty>
-                                </systemProperties>
-                            </configuration>
                         </execution>
                         <execution>
                             <id>stop-jetty</id>
@@ -261,6 +263,16 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.plugin.version}</version>
+                    <configuration>
+                        <excludes>
+                            <exclude>${exclude.tests}</exclude>
+                        </excludes>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -276,8 +288,8 @@
                     </executions>
                     <configuration>
                         <forkCount>${failsafe.forkCount}</forkCount>
-                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                        <reuseForks>true</reuseForks>
+                        <argLine>-Xmx2048m</argLine>
+                        <reuseForks>false</reuseForks>
                         <trimStackTrace>false</trimStackTrace>
                         <systemPropertyVariables>
                             <webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
@@ -287,6 +299,9 @@
                             <sauce.sauceAccessKey>${sauce.sauceAccessKey}</sauce.sauceAccessKey>
                             <sauce.options>${sauce.options}</sauce.options>
                         </systemPropertyVariables>
+                        <excludes>
+                            <exclude>${exclude.tests}</exclude>
+                        </excludes>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -394,7 +409,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-war-plugin</artifactId>
-                    <version>3.3.1</version>
+                    <version>3.3.2</version>
                     <configuration>
                         <failOnMissingWebXml>false</failOnMissingWebXml>
                     </configuration>
@@ -410,7 +425,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>1.4.1</version>
+                    <version>3.0.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
@@ -423,18 +438,11 @@
             <plugin>
                 <groupId>net.revelc.code.formatter</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
-                <version>2.11.0</version>
+                <version>2.17.1</version>
                 <configuration>
-                    <configFile>eclipse/VaadinJavaConventions.xml</configFile>
+                    <configFile>https://raw.githubusercontent.com/vaadin/flow/master/eclipse/VaadinJavaConventions.xml</configFile>
                     <skipHtmlFormatting>true</skipHtmlFormatting>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>${project.groupId}</groupId>
-                        <artifactId>flow-buildtools</artifactId>
-                        <version>${flow.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -493,21 +501,6 @@
                 <version>${flow.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.vaadin</groupId>
-                <artifactId>flow-component-demo-helpers</artifactId>
-                <version>${flow.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>javax.servlet</groupId>
-                        <artifactId>javax.servlet-api</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.hamcrest</groupId>
-                        <artifactId>hamcrest-core</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
               <groupId>com.vaadin</groupId>
               <artifactId>vaadin-dev-server</artifactId>
               <version>${flow.version}</version>
@@ -520,7 +513,7 @@
             <dependency>
                 <groupId>org.osgi</groupId>
                 <artifactId>osgi.cmpn</artifactId>
-                <version>6.0.0</version>
+                <version>7.0.0</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -549,7 +542,7 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>3.10.0</version>
+                <version>4.3.1</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
